--- a/.github/workflows/release_build.yml
+++ b/.github/workflows/release_build.yml
@@ -1,4 +1,4 @@
-name: Release Aztail
+name: Release Azcopy
 
 on:
   push:
@@ -26,6 +26,6 @@ jobs:
         uses: goreleaser/goreleaser-action@master
         with:
           version: latest
-          args: release --rm-dist
+          args: release --clean
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
