--- a/.github/workflows/release_build.yml
+++ b/.github/workflows/release_build.yml
@@ -17,9 +17,9 @@ jobs:
           fetch-depth: 0 # See: https://goreleaser.com/ci/actions/
 
       - name: Set up Go 1.20
-        uses: actions/setup-go@v2
+        uses: actions/setup-go@v4
         with:
-          go-version: 1.20
+          go-version: '1.20'
         id: go
 
       - name: Run GoReleaser
